# thor

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  main.cpp  mesh.cpp  mesh.h  thor.ui
